--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Life2vec death calculator offers an AI-powered way to learn when you will die">
     <meta name="keywords" content="life2vec">
-    <title>Life2vec</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TDPE4E487L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TDPE4E487L');
+</script>
+    <title>Life2Vec Your AI Death Calculator to Predict my Death? [2024]</title>
     <style>
         * {
             padding: 0;
